# OrbitalStabilityFinder

./: .clang-tidy  .gitignore  CMakeLists.txt  easyBuildScript.sh  format_all.py  vcpkg.json
data/: SolarSystem.hpp
include/core/: Collisions.hpp  Fitting.hpp  Geometry.hpp  Gravity.hpp  RandomBodies.hpp  SimulateTime.hpp
include/models/: Body.hpp
include/rendering/: InitaliseRendering.hpp  RenderBodies.hpp  SetupCamera.hpp  SetupLighting.hpp
src/core/: Collisions.cpp  Fitting.cpp  Geometry.cpp  Gravity.cpp  RandomBodies.cpp  SimulateTime.cpp
src/mains/: FindOrbits.cpp  SimulateSolarSystem.cpp
src/rendering/: InitaliseRendering.cpp  RenderBodies.cpp  SetupCamera.cpp  SetupLighting.cpp
tests/: CollisionsTest.cpp  SimulationTiming.cpp  SolarSystemTest.cpp
